--- a/Project 17/Solution Report.ipynb
+++ b/Project 17/Solution Report.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -44,11 +44,12 @@
     "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
     "from sklearn.metrics import roc_auc_score, accuracy_score\n",
     "\n",
-    "# Step 2: Load Data\n",
-    "contract = pd.read_csv('/datasets/final_provider/contract.csv')\n",
-    "personal = pd.read_csv('/datasets/final_provider/personal.csv')\n",
-    "internet = pd.read_csv('/datasets/final_provider/internet.csv')\n",
-    "phone = pd.read_csv('/datasets/final_provider/phone.csv')\n",
+    "# Step 2: Load datasets from public TripleTen source\n",
+    "\n",
+    "contract = pd.read_csv('https://practicum-content.s3.us-west-1.amazonaws.com/datasets/final_provider/contract.csv')\n",
+    "personal = pd.read_csv('https://practicum-content.s3.us-west-1.amazonaws.com/datasets/final_provider/personal.csv')\n",
+    "internet = pd.read_csv('https://practicum-content.s3.us-west-1.amazonaws.com/datasets/final_provider/internet.csv')\n",
+    "phone = pd.read_csv('https://practicum-content.s3.us-west-1.amazonaws.com/datasets/final_provider/phone.csv')\n",
     "\n",
     "# Step 3: Merge Data\n",
     "df = contract.merge(personal, on='customerID', how='left')\n",
